package ui.gfx;

import org.lwjgl.opengl.GL30;
import org.lwjgl.opengl.GL11;
import org.lwjgl.opengl.GL15;
import org.lwjgl.opengl.GL20;

public class Renderer {
    private Shader shader;

    /**
     * Create a new Renderer object.
     * @param shader the shader which will be applied on each render call.
     */
    public Renderer(Shader shader) {
        this.shader = shader;
    }

    /**
     * Render a mesh.
     * @param mesh
     */
    public void renderMesh(Mesh mesh) {
        // this needs some rework
        GL30.glBindVertexArray(mesh.getVAO());
        GL20.glEnableVertexAttribArray(0);
        GL15.glBindBuffer(GL15.GL_ELEMENT_ARRAY_BUFFER, mesh.getIBO());
        shader.bind(); // bind before drawing 
        GL11.glDrawElements(GL11.GL_TRIANGLES, mesh.getIndices().length, GL11.GL_UNSIGNED_INT, 0);
        shader.unbind(); // unbind after drawing (ready for the next shader to be applied)
        GL20.glDisableVertexAttribArray(0);
        GL30.glBindVertexArray(0);
    }
}
